@@ -1,10 +1,9 @@
-<?php get_header();?>
-<?php if ( has_post_thumbnail() && ! post_password_required() ){?>
-  <div class="container">
-     <?php the_post_thumbnail();?>  
-  </div>
-
- <?php }?>
+<?php
+/*
+ * Template Name: Both Sidebars
+ * Description: Left and Right Sidebars
+ */
+get_header(); ?>
 <div class="breadcrumbs margin-bottom-40">
     <div class="container">
         <h1 class="pull-left"><?php the_title();?></h1>
@@ -12,10 +11,18 @@
 </div>
 <div class="container">		
 	<div class="row blog-page blog-item">
-    	<div class="col-md-9 md-margin-bottom-60">
+	    <!-- Left Sidebar -->
+        <div class="col-md-3 magazine-page">
+		    <div class="posts margin-bottom-40">
+		        <?php dynamic_sidebar( 'gimliii-left-sidebar' ); ?>
+		    </div>
+		</div>
+        <!-- End Left Sidebar -->
+    	<div class="col-md-6 md-margin-bottom-60">
              <?php
 			if ( have_posts() ) : the_post(); ?>        
             <div class="blog margin-bottom-40"> 
+            <?php	if ( has_post_thumbnail() && ! post_password_required() ){ the_post_thumbnail(); } ?>
                 <div class="blog-body">
                 <?php the_content(); ?>
                 <p><?php wp_link_pages( array( 'before' => __( 'Pages:', 'gimliii' ), 'after' => '') ); ?></p>
