@@ -1,10 +1,10 @@
-<?php get_header();?>
-<?php if ( has_post_thumbnail() && ! post_password_required() ){?>
-  <div class="container">
-     <?php the_post_thumbnail();?>  
-  </div>
+<?php
+/*
+ * Template Name: Full Width Page
+ * Description: Full width page template, it has no sidebars.
+ */
+get_header(); ?>
 
- <?php }?>
 <div class="breadcrumbs margin-bottom-40">
     <div class="container">
         <h1 class="pull-left"><?php the_title();?></h1>
@@ -12,10 +12,15 @@
 </div>
 <div class="container">		
 	<div class="row blog-page blog-item">
-    	<div class="col-md-9 md-margin-bottom-60">
+    	<div class="col-md-12 md-margin-bottom-60">
              <?php
 			if ( have_posts() ) : the_post(); ?>        
             <div class="blog margin-bottom-40"> 
+            	<?php if ( has_post_thumbnail() && ! post_password_required() ){?>
+				  <div class="container">
+				     <?php the_post_thumbnail();?>  
+				  </div>
+ 				<?php }?>
                 <div class="blog-body">
                 <?php the_content(); ?>
                 <p><?php wp_link_pages( array( 'before' => __( 'Pages:', 'gimliii' ), 'after' => '') ); ?></p>
@@ -30,10 +35,6 @@
                 }?>
             <!-- End Recent Comments -->
         </div>
-
-        <!-- Right Sidebar -->
-        <?php get_sidebar();?>
-        <!-- End Right Sidebar -->
     </div><!--/row-->        
 </div><!--/container-->		
 <!--=== End Content Part ===-->
